packages/build/tests/error/fixtures/fail_build_post_deploy/plugin.js
'use strict'

module.exports = {
  onEnd({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
